traefik/svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: default
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-default
  ports:
    - port: 80
      name: web
      targetPort: web
      nodePort: 30000
      protocol: TCP
    - port: 443
      name: websecure
      targetPort: websecure
      protocol: TCP
    - port: 9100
      name: metrics
      targetPort: 9100
      protocol: TCP
